--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://KiokoEric.github.io/Doclab_Hospital_Website",
   "name": "hospital_website",
   "version": "0.1.0",
   "private": true,
